src/test/compile-fail/liveness-init-in-called-fn-expr.rs
fn main() {
    let j = fn@() -> int {
        let i: int;
        return i; //~ ERROR use of possibly uninitialized variable: `i`
    };
    j();
}
